<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navy_bg"
    android:orientation="vertical"
    android:hapticFeedbackEnabled="true"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/input_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">
        <TextView
            android:id="@+id/calculator_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:gravity="top|end"
            android:textAlignment="gravity"
            android:textSize="20pt"
            android:textColor="@color/white"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/answer_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/answer_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:gravity="bottom|end"
            android:textAlignment="gravity"
            android:textSize="20pt"
            android:textColor="@color/white"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/row_one"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/clear_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:onClick="onOperatorClick"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:text="@string/clear"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Button
            android:id="@+id/plus_minus_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:onClick="onOperatorClick"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:text="@string/plus_minus"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Button
            android:id="@+id/modulus_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:onClick="onOperatorClick"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:text="@string/modulus"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Button
            android:id="@+id/divide_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:onClick="onOperatorClick"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:text="@string/divide"
            android:textColor="@color/white"
            android:textSize="34sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_two"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/seven_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:onClick="onNumberClick"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:text="@string/seven"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Button
            android:id="@+id/eight_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:onClick="onNumberClick"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:text="@string/eight"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Button
            android:id="@+id/nine_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:onClick="onNumberClick"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:text="@string/nine"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Button
            android:id="@+id/multiply_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:onClick="onOperatorClick"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:text="@string/multiply"
            android:textColor="@color/white"
            android:textSize="34sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_three"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/four_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:onClick="onNumberClick"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:text="@string/four"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Button
            android:id="@+id/five_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:onClick="onNumberClick"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:text="@string/five"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Button
            android:id="@+id/six_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:onClick="onNumberClick"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:text="@string/six"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Button
            android:id="@+id/minus_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:onClick="onOperatorClick"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:text="@string/minus"
            android:textColor="@color/white"
            android:textSize="34sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_four"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/one_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:onClick="onNumberClick"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:text="@string/one"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Button
            android:id="@+id/two_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:onClick="onNumberClick"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:text="@string/two"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Button
            android:id="@+id/three_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:onClick="onNumberClick"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:text="@string/three"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Button
            android:id="@+id/plus_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:onClick="onOperatorClick"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:text="@string/plus"
            android:textColor="@color/white"
            android:textSize="34sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_five"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/zero_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/button_border"
            android:onClick="onNumberClick"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Button
            android:id="@+id/decimal_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:onClick="onOperatorClick"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:text="@string/decimal"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Button
            android:id="@+id/equals_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:onClick="onOperatorClick"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:text="@string/equals"
            android:textColor="@color/white"
            android:textSize="34sp" />
    </LinearLayout>
</LinearLayout>